--- a/index.html
+++ b/index.html
@@ -90,29 +90,31 @@
   </div>
   <script>
   </script>
-  <!-- <div class="container" id="main">
+  <div class="container" id="main">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 text-center">
         <ul class="list-inline">
-          <li> <a href="https://y-u-a-n-l-i.github.io/">Yuan Li<sup>1,2*</sup></a> </li>
-          <li> <a href="https://zhihao-lin.github.io/"> Zhi-Hao Lin<sup>1*</sup></a> </li>
-          <li> <a href="http://luthuli.cs.uiuc.edu/~daf/">David Forsyth<sup>1</sup></a> </li>
-          <li> <a href="https://jbhuang0604.github.io/">Jia-Bin Huang<sup>3</sup></a> </li>
-          <li> <a href="https://shenlong.web.illinois.edu/">Shenlong Wang<sup>1</sup></a> </li>
+          <li> <a href="https://www.linkedin.com/in/shivani-guptasarma/">Shivani Guptasarma<sup>1</sup></a> </li>
+          <li> <a href="https://peasant98.github.io/"> Matt Strong<sup>1</sup></a> </li>
+          <li> <a href="https://www.linkedin.com/in/honghao-zhen/">Honghao Zhen<sup>1</sup></a> </li>
+          <li> <a href="https://monroekennedy3.com/">Monroe Kennedy<sup>1</sup></a> </li>
         </ul>
         <ul class="list-inline">
-          <li> <sup>2</sup>Zhejiang University </li>
-          <br />
-          <li> <sup>*</sup> Equal Contribution</li>
+          <li> <sup>1</sup>Stanford University </li>
         </ul>
       </div>
-    </div> -->
+    </div>
     <div class="container" id="main">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 text-center">
-          Anonymous Authors
+          <div class="university-logo">
+            <a href="https://arm.stanford.edu/">
+            <img src="Jparse_files/logo/armlab_logo.png" alt="Stanford University logo placeholder" width="30%" />
+          </a>
+          </div>
         </div>
       </div>
+    </div>
     
 
     <div class="row">
