--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </a>
         </span>
         <span class="link-block">
-          <a href="https://github.com/jparse-manip/jparse-manip.github.io"
+          <a href="https://github.com/armlabstanford/jparse"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <svg class="svg-inline--fa fa-github fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab"
@@ -144,7 +144,7 @@
                 </path>
               </svg><!-- <i class="fab fa-github"></i> Font Awesome fontawesome.com -->
             </span>
-            <span>Code (Coming Soon)</span>
+            <span>Code</span>
           </a>
         </span>
       </div>
