add meta description and favicon

--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
 
 <head lang="en">
-  <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> -->
-
-  <!-- <meta http-equiv="x-ua-compatible" content="ie=edge"> -->
-
+  <meta charset="utf-8">
   <title>J-PARSE</title>
-
-  <meta name="description" content="">
+  <meta name="description"
+      content="J-PARSE enables for the smooth entering and exiting of kinematic singularities for robotic manipulators.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- mirror: F0%9F%AA%9E&lt -->
 
@@ -36,9 +33,9 @@
   <script src="./ClimateNeRF_files/select.js"></script>
   <script src="./ClimateNeRF_files/bulma-slider.min.js"></script>
   <script src="./ClimateNeRF_files/bulma-carousel.min.js"></script>
-  <!-- <script src="./ClimateNeRF_files/app.js"></script> -->
   <script src="./ClimateNeRF_files/index.js"></script>
-  <!-- <script src="./ClimateNeRF_files/slick.js"></script> -->
+  
+  <link rel="icon" href="Jparse_files/favicon.ico">
 
   <script src="resources/glide.min.js"></script>
   <script>
