--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 text-center">
         <span class="link-block">
-          <a href="https://arxiv.org/" class="external-link button is-normal is-rounded is-dark">
+          <a href="http://arxiv.org/pdf/2505.00306" class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <svg class="svg-inline--fa fa-file-pdf fa-w-12" aria-hidden="true" focusable="false" data-prefix="fas"
                 data-icon="file-pdf" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
