--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           </a>
         </span>
         <span class="link-block">
-          <a href="https://github.com/jparse-manip/jparse-manip.github.io"
+          <a href="https://github.com/armlabstanford/jparse"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <svg class="svg-inline--fa fa-github fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab"
@@ -273,7 +273,7 @@
                 </path>
               </svg>
             </span>
-            <span>Code (Coming Soon)</span>
+            <span>Code</span>
           </a>
         </span>
         <h3 class="col-md-12 text-center laptop-only-header" id="title">
