all from one university

--- a/index.html
+++ b/index.html
@@ -223,13 +223,13 @@
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 text-center">
         <ul class="list-inline">
-          <li> <a href="https://www.linkedin.com/in/shivani-guptasarma/">Shivani Guptasarma<sup>1</sup></a> </li>
-          <li> <a href="https://peasant98.github.io/"> Matt Strong<sup>1</sup></a> </li>
-          <li> <a href="https://www.linkedin.com/in/honghao-zhen/">Honghao Zhen<sup>1</sup></a> </li>
-          <li> <a href="https://monroekennedy3.com/">Monroe Kennedy<sup>1</sup></a> </li>
+          <li> <a href="https://www.linkedin.com/in/shivani-guptasarma/">Shivani Guptasarma</a> </li>
+          <li> <a href="https://peasant98.github.io/"> Matt Strong</a> </li>
+          <li> <a href="https://www.linkedin.com/in/honghao-zhen/">Honghao Zhen</a> </li>
+          <li> <a href="https://monroekennedy3.com/">Monroe Kennedy</a> </li>
         </ul>
         <ul class="list-inline">
-          <li> <sup>1</sup>Stanford University </li>
+          <li> Stanford University </li>
         </ul>
       </div>
     </div>
