--- a/index.html
+++ b/index.html
@@ -730,56 +730,56 @@
 
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <h3 style="margin-top: 40px; margin-bottom: 20px;">
-                 Citation
-               </h3>
-               <p style="margin-bottom: 25px; font-size: 16px;">
-                 If you find our project useful, please consider citing:
-               </p>
-               <div class="CodeMirror cm-s-default CodeMirror-wrap" style="padding: 20px; background-color: #f8f9fa; border-radius: 8px; margin-bottom: 30px;">
-                 <div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 38.28px; left: 647px;">
-                   <textarea autocorrect="off" autocapitalize="off" spellcheck="false"
-                     style="position: absolute; padding: 0px; width: 1000px; height: 1em; outline: none;"
-                     tabindex="0"></textarea>
-                 </div>
-                 <div class="CodeMirror-vscrollbar" cm-not-content="true">
-                   <div style="min-width: 1px; height: 0px;"></div>
-                 </div>
-                 <div class="CodeMirror-hscrollbar" cm-not-content="true">
-                   <div style="height: 100%; min-height: 1px; width: 0px;"></div>
-                 </div>
-                 <div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div>
-                 <div class="CodeMirror-gutter-filler" cm-not-content="true"></div>
-                 <div class="CodeMirror-scroll" tabindex="-1">
-                   <div class="CodeMirror-sizer"
-                     style="margin-left: 0px; margin-bottom: -15px; border-right-width: 15px; min-height: 111px; padding-right: 0px; padding-bottom: 0px;">
-                     <div style="position: relative; top: 0px;">
-                       <div class="CodeMirror-lines">
-                         <div style="position: relative; outline: none;">
-                           <div class="CodeMirror-measure">AخA</div>
-                           <div class="CodeMirror-measure"></div>
-                           <div style="position: relative; z-index: 1;"></div>
-                           <div class="CodeMirror-cursors">
-                             <div class="CodeMirror-cursor" style="left: 647px; top: 34.28px; height: 17.1406px;">&nbsp;</div>
-                           </div>
-                           <div class="CodeMirror-code" style="font-size: 15px; line-height: 1.6;">
-                             <pre class="CodeMirror-line" style="margin-bottom: 4px;"><span style="padding-right: 0.1px;">@article{guptasarma2025JParse,</span></pre>
-                             <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px;"><span style="padding-right: 0.1px;">title={J-PARSE: Jacobian-based Projection Algorithm for Resolving Singularities Effectively in Inverse Kinematic Control of Serial Manipulators},</span></pre>
-                             <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px;"><span style="padding-right: 0.1px;">author={Guptasarma, Shivani; Strong, Matthew; Zhen, Honghao; Kennedy III, Monroe},</span></pre>
-                             <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px;"><span style="padding-right: 0.1px;">journal={arXiv preprint arXiv:2505.00306},</span></pre>
-                             <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px;"><span style="padding-right: 0.1px;">year={2025}</span></pre>
-                             <pre class="CodeMirror-line"><span style="padding-right: 0.1px;">}</span></pre>
-                           </div>
-                         </div>
-                       </div>
-                     </div>
-                   </div>
-                   <div style="position: absolute; height: 15px; width: 1px; top: 111px;"></div>
-                   <div class="CodeMirror-gutters" style="display: none; height: 126px;"></div>
-                 </div>
-               </div>
-             </div>
-           </div>
+              <h3 style="margin-top: 40px; margin-bottom: 20px;">
+                Citation
+              </h3>
+              <p style="margin-bottom: 25px; font-size: 16px;">
+                If you find our project useful, please consider citing:
+              </p>
+              <div class="CodeMirror cm-s-default CodeMirror-wrap" style="padding: 20px; background-color: #f8f9fa; border-radius: 8px; margin-bottom: 30px;">
+                <div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 38.28px; left: 647px;">
+                  <textarea autocorrect="off" autocapitalize="off" spellcheck="false"
+                    style="position: absolute; padding: 0px; width: 1000px; height: 1em; outline: none;"
+                    tabindex="0"></textarea>
+                </div>
+                <div class="CodeMirror-vscrollbar" cm-not-content="true">
+                  <div style="min-width: 1px; height: 0px;"></div>
+                </div>
+                <div class="CodeMirror-hscrollbar" cm-not-content="true">
+                  <div style="height: 100%; min-height: 1px; width: 0px;"></div>
+                </div>
+                <div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div>
+                <div class="CodeMirror-gutter-filler" cm-not-content="true"></div>
+                <div class="CodeMirror-scroll" tabindex="-1">
+                  <div class="CodeMirror-sizer"
+                    style="margin-left: 0px; margin-bottom: -15px; border-right-width: 15px; min-height: 111px; padding-right: 0px; padding-bottom: 0px;">
+                    <div style="position: relative; top: 0px;">
+                      <div class="CodeMirror-lines">
+                        <div style="position: relative; outline: none;">
+                          <div class="CodeMirror-measure">AخA</div>
+                          <div class="CodeMirror-measure"></div>
+                          <div style="position: relative; z-index: 1;"></div>
+                          <div class="CodeMirror-cursors">
+                            <div class="CodeMirror-cursor" style="left: 647px; top: 34.28px; height: 17.1406px;">&nbsp;</div>
+                          </div>
+                          <div class="CodeMirror-code" style="font-size: 15px; line-height: 1.6; font-weight: normal;">
+                            <pre class="CodeMirror-line" style="margin-bottom: 4px; font-weight: normal;"><span style="padding-right: 0.1px; font-weight: normal;">@article{guptasarma2025JParse,</span></pre>
+                            <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px; font-weight: normal;"><span style="padding-right: 0.1px; font-weight: normal;">title={J-PARSE: Jacobian-based Projection Algorithm for Resolving Singularities Effectively in Inverse Kinematic Control of Serial Manipulators},</span></pre>
+                            <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px; font-weight: normal;"><span style="padding-right: 0.1px; font-weight: normal;">author={Guptasarma, Shivani; Strong, Matthew; Zhen, Honghao; Kennedy III, Monroe},</span></pre>
+                            <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px; font-weight: normal;"><span style="padding-right: 0.1px; font-weight: normal;">journal={arXiv preprint arXiv:2505.00306},</span></pre>
+                            <pre class="CodeMirror-line" style="margin-bottom: 4px; padding-left: 15px; font-weight: normal;"><span style="padding-right: 0.1px; font-weight: normal;">year={2025}</span></pre>
+                            <pre class="CodeMirror-line" style="font-weight: normal;"><span style="padding-right: 0.1px; font-weight: normal;">}</span></pre>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div style="position: absolute; height: 15px; width: 1px; top: 111px;"></div>
+                  <div class="CodeMirror-gutters" style="display: none; height: 126px;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
 
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
