--- a/index.html
+++ b/index.html
@@ -327,8 +327,18 @@
       </div>
     </div>
 
-    <!-- add in the first video: xarm teleop -->
     <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 text-center">
+        <iframe width="946" height="532" src="https://www.youtube.com/embed/ZMrNGQht9eg"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+
+    <!-- add in the first video: xarm teleop -->
+    <!-- <div class="row">
       <div class="col-sm-10 col-sm-offset-1 text-center">
         <video id="garden-v1" width="100%" playsinline autoplay loop muted controls
           poster="ClimateNeRF_files/loading.gif">
@@ -336,7 +346,7 @@
           Your browser does not support the video tag.
         </video>
       </div>
-    </div>
+    </div> -->
 
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
