--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                   </div>
                   
                   <div id="laymanContent" style="font-weight: normal">
-                      <h3>Layman's Explanation</h3>
+                      <h3>Lay Explanation</h3>
                       <div class="text-justify">
                         <span class="styled-bold">What is the problem?</span>
                         <br>
@@ -430,10 +430,11 @@
                           <span class="styled-bold">Is there a simple analogy?</span>
                           <br>
                           A child (or for that matter, an adult) is good at one activity and finds another extremely daunting. The goal is for this child to achieve a task that relies on successful completion of both activities. As a teacher, the options are:
+                          <br><br>
                         1. Insist on both parts being completed in a short period of time. The child's confidence is shattered and neither part gets done. In fact everything goes downhill after this. Even bystanders suffer.
-                        <br>
+                        <br><br>
                         2. Decide that nothing can be done about the task as a whole. Instruct the child not to attempt it. The task remains undone and the skill unlearned. The child never even finds out what was possible.
-                        <br>
+                        <br><br>
                         3. Explain that the task has two parts. The first part can and should be done, and will move fast and be done well. For the second part, ask first for only a start, a small piece of the job. Once the start is made, ask for a little more, something manageable. Explain that there is enough time to learn and do just that piece for now. Keep breaking the activity into parts and stepping through it piece by piece. In time, the entire task will be completed, and the child's capabilities expanded.
                       </div>
                   </div>
