--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
 .container {
             max-width: 800px;
             margin: 0 auto;
+        }
+
+        .lay-container {
+            max-width: 800px;
+            margin: 0 auto;
             padding: 20px;
         }
         
@@ -381,7 +386,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="lay-container">
       <div class="row">
           <div class="col-md-10">
               <div class="toggle-container">
