--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
   </script>
   <style>
 
+.video-container {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+      height: 0;
+      overflow: hidden;
+    }
+    
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+    
+    /* Additional responsive breakpoints */
+    @media (max-width: 768px) {
+      .container {
+        padding: 10px;
+      }
+    }
+
 .container {
             max-width: 800px;
             margin: 0 auto;
@@ -469,10 +493,11 @@
       });
   </script>
 
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 text-center">
-        <iframe width="946" height="532" src="https://www.youtube.com/embed/ZMrNGQht9eg"
-          title="YouTube video player" frameborder="0"
+    <div class="container">
+      <div class="video-container">
+        <iframe 
+          src="https://www.youtube.com/embed/ZMrNGQht9eg"
+          title="YouTube video player" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen>
         </iframe>
