--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
       </a>
       </span>
      <span class="link-block">
+      
      <a href="http://arxiv.org/pdf/2505.00306" class="external-link button is-normal is-rounded is-dark">
      <span class="icon">
      <svg class="svg-inline--fa fa-file-pdf fa-w-12" aria-hidden="true" focusable="false" data-prefix="fas"
@@ -394,6 +395,12 @@
       <span>Video</span>
       </a>
       </span>
+
+      <div style="margin-top: 7px;">
+        <span class="link-block">
+         <a href="https://colab.research.google.com/github/armlabstanford/jparse/blob/main/jparse_collab_example.ipynb" target="_parent"><img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Open In Colab"></a>
+        </span>
+      </div>
 
 
      
